--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-VITE_APP_LINK_API=https://powerful-shrug-fox.cyclic.app
+# VITE_APP_LINK_API=https://powerful-shrug-fox.cyclic.app
+VITE_APP_LINK_API=http://localhost:3000
